...
        android:textColor="@color/colorAccent"
        android:text="@string/no_text"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_wrapper"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_error"
        android:hint="@string/email_hint"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            style="@style/AppTheme.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_wrapper"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_wrapper"
        app:passwordToggleEnabled="true"
        android:hint="@string/password_hint"
        app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
        app:hintTextAppearance="@style/AppTheme.Text.HintText" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            style="@style/AppTheme.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_wrapper"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/login_button"
...
        android:paddingTop="@dimen/_16sdp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/switch_sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_16sdp"
        android:text="@string/sign_up"
...
