<resources>
    <string name="app_name">TimemanagementTool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="current_recording">Current recording</string>
    <string name="tasks">Tasks</string>
    <string name="statistics">Statistics</string>
    <string name="test">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="task">Task:</string>
    <string name="arrive">Arrive</string>
    <string name="leave">Leave</string>
    <string name="text_break">Break</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="profile_names">Display name</string>
    <string name="task_done">Task done</string>
    <string name="induce_smile">Induce Smile</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_password">New password</string>
    <string name="save_name">Save name</string>
    <string name="edit_profile_confirm_password">Confirrm new password</string>
    <string name="save_password">save password</string>
    <string name="department">Department</string>
    <string name="new_key">New</string>
    <string name="administration">Administration</string>
    <string name="edit_profile_old_password">Old password</string>
    <string name="logout">Logout</string>
    <string name="forename_hint">Forename</string>
    <string name="surename_hint">Surename</string>
    <string name="company_hint">Company name</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="missing_email_address">Missing Email Address</string>
    <string name="short_password">Password not strong enough. Use at least 6 characters and a mix of letters and numbers</string>
    <string name="password_must_be_same">Passwords must be the same</string>
    <string name="confirm_field_empty">Confirm field can not be empty</string>
    <string name="original_field_empty">Original Field can not be empty</string>
    <string name="submit_user">Submit User</string>
    <string name="create_a_new_department">Create a new Department</string>
    <string name="department_name">Department Name</string>
    <string name="department_supervisor">Department Supervisor</string>
    <string name="submit_department">Submit Department</string>
    <string name="department_dropdown_title">Department</string>
    <string name="employee_dropdown_title">Employee</string>
    <string name="employee_overview">Employee Overview</string>
    <string name="relogging_user_please_wait">Relogging User Please wait</string>
    <string name="department_overview">Department Overview</string>
    <string name="details_for_department">Details for Department</string>
    <string name="supervisor_name">SuperVisor name</string>
    <string name="supervisor">Supervisor: </string>
    <string name="users">Users</string>
    <string name="edit_department">Edit Department</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <plurals name="error_week_password">
        <item quantity="one">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="task_description">Description:</string>
    <string name="task_author">Author:</string>
    <string name="task_name">Name:</string>
    <string name="task_deadline">Deadline:</string>
</resources>
